--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(cran_stats)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
+importFrom(utils,available.packages)
 importFrom(utils,read.table)
