--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,23 @@ export(biocApp)
 export(bioc_stats)
 export(cranApp)
 export(cran_stats)
+export(plot_bioc_stats)
+export(plot_cran_stats)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
+importFrom(scales,comma)
 importFrom(utils,available.packages)
+importFrom(utils,read.delim)
 importFrom(utils,read.table)
