--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     utils
 Suggests:
     knitr,
-    tidyr
+    tidyr,
+    DT
 License: Artistic-2.0
 VignetteBuilder: knitr
 ByteCompile: true
