--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dlstats
 Title: Download Stats of R Packages
-Version: 0.1.1
+Version: 0.1.2
 Authors@R: c(person(given = "Guangchuang", family = "Yu",
-	   	    email = "guangchuangyu@gmail.com",
+	   	     email = "guangchuangyu@gmail.com",
 		    role  = c("aut", "cre"))
 	    )
 Maintainer: Guangchuang Yu <guangchuangyu@gmail.com>
@@ -21,7 +21,8 @@ Imports:
 Suggests:
     knitr,
     tidyr,
-    DT
+    DT,
+    prettydoc
 License: Artistic-2.0
 VignetteBuilder: knitr
 ByteCompile: true
@@ -29,4 +30,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/GuangchuangYu/dlstats
 BugReports: https://github.com/GuangchuangYu/dlstats/issues
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.1
