--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(person(given = "Guangchuang", family = "Yu",
 	    )
 Maintainer: Guangchuang Yu <guangchuangyu@gmail.com>
 Description: Monthly download stats of 'CRAN' and 'Bioconductor' packages.
-	     Download stats of 'CRAN' packages is from the 'RStudio' 'CRAN mirror', see <http://cranlogs.r-pkg.org>.
+	     Download stats of 'CRAN' packages is from the 'RStudio' 'CRAN mirror', see <https://cranlogs.r-pkg.org:443>.
 	     'Bioconductor' package download stats is at <https://bioconductor.org/packages/stats/>.
 Depends:
     R (>= 3.3.0)
@@ -28,7 +28,6 @@ License: Artistic-2.0
 VignetteBuilder: knitr
 ByteCompile: true
 Encoding: UTF-8
-LazyData: true
 URL: https://github.com/GuangchuangYu/dlstats
 BugReports: https://github.com/GuangchuangYu/dlstats/issues
 RoxygenNote: 6.1.1
