--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cranApp)
 export(cran_stats)
 export(plot_bioc_stats)
 export(plot_cran_stats)
+export(set_cran_start_year)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_line)
